--- a/src/less/import/intro.less
+++ b/src/less/import/intro.less
@@ -1,16 +1,22 @@
+.intro.slide {
+    height: 90vh;
+    padding-top:10vh;
+}
 .l-1 {
     display: block;
     animation: fadein 2s 1;
 }
-.l-2 {
+.l-2,
+.l-3 {
     display: block;
+    margin-top: 0.2em;
     opacity: 0;
+}
+.l-2 {
     font-size: 0.7em !important;
     animation: fadeinup 2s 0.4s 1 forwards;
 }
 .l-3 {
-    display: block;
-    opacity: 0;
     font-size: 0.6em !important;
     animation: fadeinup2 1.5s 1s 1 forwards;
 }
@@ -62,7 +68,7 @@
 }
 
 a[href="#more"] {
-    @size: 60px;
+    @size: 200px;
     position: absolute;
     bottom: 20px;
     left: 50%;
