--- a/src/less/import/typog.less
+++ b/src/less/import/typog.less
@@ -65,7 +65,7 @@ p {
     margin-bottom: 0;
     line-height: @leading;
     &.imp {
-        font: 200 3em/1.4 @font-sans-2;
+        font: 200 3em/1.1 @font-sans-2;
     }
     a {
         text-decoration: underline;
